# gameEngine

./: .gitignore  CMakeLists.txt  readMe.md
core/include/: collider.hpp  collisionHandler.hpp  contact.hpp  contactResolver.hpp  entity.hpp  forceGeneration.hpp  linearalg.hpp  manifold.hpp  primitive.hpp  rigidBody2D.hpp  shapes.hpp  types.hpp  utils.hpp  visuals.hpp  world.hpp
core/src/: collider.cpp  collidible.cpp  collisionHandler.cpp  contact.cpp  contactResolver.cpp  linearalg.cpp  main.cpp  manifold.cpp  rigidBody2D.cpp  utils.cpp  visuals.cpp  world.cpp
demos/: benchMark.cpp  colliderSphereSphereDemo.cpp  collisionTest.cpp  gjkTests.cpp  main.cpp
include/: rigidBody2D.hpp  shapes.hpp  types.hpp
src/: collider.cpp  collider.hpp  collidible.cpp  collidible.hpp  entity.cpp  entity.hpp  forceGeneration.cpp  forceGeneration.hpp  main.cpp  rigidBody2D.cpp  rigidBody2D.hpp  shapes.hpp
